--- a/arch/arm/configs/artik10_defconfig
+++ b/arch/arm/configs/artik10_defconfig
@@ -38,6 +38,7 @@ CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG=y
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE=y
+CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_HMP=y
 CONFIG_HMP_FAST_CPU_MASK="4-7"
 CONFIG_HMP_SLOW_CPU_MASK="0-3"
