Set WRR policy as default / Modify core.c to support WRR policy

--- a/arch/arm/configs/artik10_defconfig
+++ b/arch/arm/configs/artik10_defconfig
@@ -39,6 +39,7 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE=y
 CONFIG_SCHED_DEBUG=y
+CONFIG_SCHEDSTAT=y
 CONFIG_SCHED_HMP=y
 CONFIG_HMP_FAST_CPU_MASK="4-7"
 CONFIG_HMP_SLOW_CPU_MASK="0-3"
